--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en" dir="ltr">
 
 <head>
-
-
   <title>Cinema News & Views</title>
-  <meta name="title" content="FS Film Reklam">
-  <meta name="description" content="FS Film Reklam">
-  <meta name="keywords" content="">
-  <meta name="author" content="Victor Sago">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="title" content="FS Film Reklam" />
+  <meta name="description" content="FS Film Reklam" />
+  <meta name="keywords" content="" />
+  <meta name="author" content="Victor Sago" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <!-- <link rel="stylesheet" href=""> -->
-
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
   <header>
     <p>
       <a href="https://www.imdb.com/title/tt1748122/" target="_blank">
-        <img src="https://m.media-amazon.com/images/M/MV5BMzllMWI1ZDQtMmFhNS00NzJkLThmMTMtNzFmMmMyYjU3ZGVjXkEyXkFqcGdeQXVyMDI2NDg0NQ@@._V1_.jpg" height="300" alt="Moonrise Kingdom">
+        <img src="https://m.media-amazon.com/images/M/MV5BMzllMWI1ZDQtMmFhNS00NzJkLThmMTMtNzFmMmMyYjU3ZGVjXkEyXkFqcGdeQXVyMDI2NDg0NQ@@._V1_.jpg" height="300" alt="Moonrise Kingdom" />
       </a>
     </p>
   </header>
-  <hr width="80%" />
+
+  <hr id="topruler" />
+
   <main>
     <section id="description">
       <h1>Moonrise Kingdom (2012)</h1>
@@ -66,13 +65,11 @@
 
     <section id="trailervideo">
       <h3>Trailer</h3>
-      <p>
-        Watch the movie trailer on YouTube:
-      </p>
+      <p>Watch the movie trailer on YouTube:</p>
       <div class="trailer">
-        <iframe src="https://www.youtube.com/embed/_eOI3AamSm8" width="768" height="480" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/_eOI3AamSm8" title="Moonrise Kingdom (2012) trailer" width="768" height="480" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
-
     </section>
 
     <section id="links">
@@ -80,23 +77,27 @@
       <p>
         You can find additional information following some of these links:
       </p>
-      <ul>
-        <li><a href="https://www.imdb.com/title/tt1748122/" target="_blank">IMDB</a></li>
-        <li><a href="https://www.metacritic.com/movie/moonrise-kingdom" target="_blank">Metacritic</a></li>
-        <li><a href="https://www.rottentomatoes.com/m/moonrise_kingdom" target="_blank">Rotten Tomatoes</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Moonrise_Kingdom" target="_blank">Wikipedia</a></li>
-      </ul>
+      <div class="endlinkstable">
 
+        <ul>
+          <li><a href="https://www.imdb.com/title/tt1748122/" target="_blank">IMDB</a> | </li>
+          <li><a href="https://www.metacritic.com/movie/moonrise-kingdom" target="_blank">Metacritic</a> | </li>
+          <li><a href="https://www.rottentomatoes.com/m/moonrise_kingdom" target="_blank">Rotten Tomatoes</a> | </li>
+          <li><a href="https://en.wikipedia.org/wiki/Moonrise_Kingdom" target="_blank">Wikipedia</a></li>
+        </ul>
+      </div>
     </section>
-
   </main>
 
-  <hr width="98%" />
+  <hr id="bottomruler" />
 
   <footer>
-    <p>Webmaster: Victor Sago</p>
-    <p>Mail: <a href="mailto:VictorSago01@gmail.com">VictorSago01@gmail.com</a></p>
-    <p>On behalf of Filmbolaget FS</p>
+    <div class="footertext">
+      <p>
+        Webmaster: <a href="mailto:VictorSago01@gmail.com">Victor Sago</a>
+      </p>
+      <p>On behalf of Filmbolaget FS</p>
+    </div>
   </footer>
 </body>
 
